[metadata]
name = nspeed
url = https://github.com/seung-lab/network-speed/
summary = Test network speed using various configurations.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/network-speed/
license = License :: OSI Approved :: BSD License
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages = 
    nspeed